--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "autoprefixer": "10.4.15",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
-    "next": "13.4.19",
-    "openai": "^4.0.0",
+    "next": "^13.5.6",
+    "openai": "^4.28.0",
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-avatar": "^5.0.3",
